Fixing the result generation and making VCARD default for QR code
Signed-off-by: Gergely Csatari <gergely.csatari@nokia.com>

--- a/config.yaml
+++ b/config.yaml
@@ -92,5 +92,5 @@ pre-order-data:
     position: "100, 700"
     color: "207,19,19"
 qr-code:
-  status: "hash"
+  status: "vcard"
   position: "70, 1300"
